--- a/css/index.css
+++ b/css/index.css
@@ -30,3 +30,43 @@ form , input , button , select , option , textarea{
     background-color: transparent;
     appearance: none;
 }
+.Header{
+    /* background-color: pink; */
+}
+.Header-wrapper{
+    /* background-color: lightgreen; */
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2rem 0;
+}
+.Header-left{
+    /* background-color:lightblue; */
+}
+.Header-logo{}
+.Header-a{}
+.Header-img{}
+.Header-nav{
+    /* background-color: lightsalmon; */
+}
+.Header-ul{
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+    gap: 3rem;
+}
+.Header-right{
+
+    /* background-color: red; */
+}
+.Header-span{
+    /* background-color: aqua; */
+    display: block;
+    padding: 1rem 2rem;
+    border: 2px solid black;
+}
+.Header-link{
+    /* background-color: purple; */
+}
