--- a/css/index.css
+++ b/css/index.css
@@ -273,6 +273,44 @@ body{
     border: 2px solid black;
 
 }
-.Programs-a{
-    
+.Programs-a{}
+
+.Main-maps{}
+.Maps{
+    /* background-color: pink; */
+    width: 90%;
+    margin: auto;
+    padding: 10% 0;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center;
+    gap: 2rem;
 }
+.Maps-section{
+    /* background-color: lime; */
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 1rem;
+    width: 50%;
+}
+.Maps-h3{
+    /* background-color: lightblue; */
+    font-size: 2.375rem;
+    width: 100%;
+}
+.Maps-p{
+    /* background-color: lavender; */
+    font-size: 1rem;
+    width: 100%;
+    padding-bottom: 1rem;
+    border-bottom: 2px solid black;
+}
+.Maps-img{
+    background-color: lightgrey;
+    width: 100%;
+    min-height: 60vh;
+}
+
