--- a/css/index.css
+++ b/css/index.css
@@ -36,7 +36,7 @@ body{
 }
 .Wrapper{
     width: 90%;
-    background-color: bisque;
+    /* background-color: blue; */
     margin: auto;
 }
 
@@ -82,10 +82,10 @@ body{
 }
 
 .Main{
-    background-color: lightyellow;
+    /* background-color: lightyellow; */
 }
 .Main-wrapper{
-    background-color: azure;
+    /* background-color: azure; */
 }
 .Main-digital{
 }
@@ -314,3 +314,88 @@ body{
     min-height: 60vh;
 }
 
+.Footer{
+    background-color: black;
+    color: white;
+}
+.Footer-wrapper{
+    /* background-color: darkblue; */
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 10% 0;
+}
+
+.Footer-columnas{
+    width: 100%;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 1rem;
+    /* background-color: darkmagenta; */
+}
+
+.Footer-img{
+    /* background-color: pink; */
+    width: 6rem;
+}
+.Footer-link{}
+.Footer-span{
+    /* background-color: aqua; */
+    display: block;
+}
+
+.Footer-ul{
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 1rem;
+}
+.Footer-li{
+    font-size: 1.25rem;
+}
+
+.Footer-form{}
+.Form{
+    /* background-color: darkgreen; */
+    position: relative;
+}
+.Form-input{
+    /* background-color: darkkhaki; */
+    padding-bottom: 1rem;
+    border-bottom: 2px solid white;
+    font-size: .9375rem;
+}
+.Form-input::placeholder{
+    color: white;
+}
+.Form-btn{}
+.Form-svg{
+    width: 1rem;
+    color: white;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.Footer-rrss{}
+.Rrss{
+    /* background-color: darkgoldenrod; */
+    width: 100%;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 1rem;
+    padding-top: 1rem;
+}
+.Rrss-li{
+    /* background-color: darkred; */
+}
+.Rrss-svg{
+    width: 1.5rem;
+    color: white;
+}
