Imagenes, final ordenador
He añadido las imágenes y ya tengo listo mi diseño en modo ordenador.

--- a/css/index.css
+++ b/css/index.css
@@ -154,9 +154,10 @@ body{
     gap: 1rem;
 }
 .Columnas-img{
-    background-color: lightgrey;
+    /* background-color: lightgrey; */
     width: 100%;
     min-height: 70vh;
+    object-fit: cover;
 }
 .Columnas-ask{
     min-height: 40vh;
@@ -309,9 +310,10 @@ body{
     border-bottom: 2px solid black;
 }
 .Maps-img{
-    background-color: lightgrey;
+    /* background-color: lightgrey; */
     width: 100%;
     min-height: 60vh;
+    object-fit: cover;
 }
 
 .Footer{
