--- a/css/index.css
+++ b/css/index.css
@@ -369,12 +369,23 @@ body{
     border-bottom: 2px solid black;
 }
 .Maps-img{
-    background-color: lightgrey;
+    /* background-color: lightgrey; */
     width: 100%;
     min-height: 60vh;
     object-fit: cover;
 }
 
+@media(max-width:1024px){
+    .Maps{
+        width: 90%;
+        flex-flow: column nowrap;
+        justify-content: flex-start;
+        align-items: flex-start;
+    }
+    .Maps-section{
+        width: 100%;
+    }
+}
 .Footer{
     background-color: black;
     color: white;
