--- a/css/index.css
+++ b/css/index.css
@@ -74,6 +74,21 @@ body{
     align-items: center;
     gap: 3rem;
 }
+.Header-li{
+    width: 100%;
+}
+.Header-li::after{
+   content: '';
+   width: 100%;
+   height: 2px;
+   background-color: black;
+   transform: scaleX(0);
+   transition: all .5s ease;
+   transform-origin: left;
+}
+.Header-li:hover::after{
+    transform: scaleX(1);
+}
 .Header-right{
 
     /* background-color: red; */
@@ -83,6 +98,11 @@ body{
     display: block;
     padding: 1rem 2rem;
     border: 2px solid black;
+    transition: all .5s ease;
+}
+.Header-span:hover{
+    background-color: black;
+    color: white;
 }
 .Header-link{
     /* background-color: purple; */
@@ -195,7 +215,20 @@ body{
     /* background-color: lime; */
     font-size: 1rem;
     padding-bottom: .3rem;
-    border-bottom: 2px solid black;
+}
+
+.Columnas-span::after{
+    content: '';
+    width: 100%;
+    height: 2px;
+    background-color: black;
+    transform: scaleX(1);
+    transform-origin: left;
+    transition: all .5s ease;
+}
+.Columnas-span:hover::after{
+    transform: scaleX(0);
+    background-color: rgb(169, 173, 127);
 }
 
 @media(max-width:1024px){
@@ -244,6 +277,12 @@ body{
     justify-content: center;
     align-items: center;
     gap: 1rem;
+    transition: all 1s ease;
+}
+.Names-li:hover{ 
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
 }
 .Names-li::after{
     content:'';
@@ -336,7 +375,12 @@ body{
     display: block;
     padding: 1rem 2rem;
     border: 2px solid black;
+    transition: all .5s ease;
 
+}
+.Programs-btn:hover{
+    background-color: black;
+    color: white;
 }
 .Programs-a{}
 
